css/style_smartphone.less
@import "mixins.less";
@import "variables.less";

/* apply a natural box layout model to all elements */
* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

::-moz-selection {
    background: #a07272;
    color: #fff;
    text-shadow: none;
}

::selection {
    background: #a07272;
    color: #fff;
    text-shadow: none;
}

html {
    background: none;
}

body {
    background: @base2;
    color: #5c5c5c ;
    font: normal 100% 'Lato', serif;
    margin: auto;
    padding: 0 1em 0 1em;
    overflow-x: hidden;
    -ms-touch-action: auto;
}

header {
    margin: 23px 0 0 70px;
}

h2 {
    line-height: 30px;
}

h2, h3, h4 {
    margin-top: 0;
}

footer {
    text-align: right;
    margin-bottom: 0.5em;
    font-size: 0.75em;
    font-weight: normal;
    font-style: italic;
}

h1 {
    font-family: 'Lobster', serif;
    font-size: 2em;
    font-weight: normal;
    word-spacing: -0.2em;
}

h1 span {
    color: #a07272;
    margin: 10px;
}

a:focus {
    outline: none;
}

a, a:visited {
    color: #a07272;
}

a:hover {
    color: #611414;
}

input {
    padding: 4px 8px 4px 8px;
    border: 1px solid #a07272;
    .border-radius(4px);
}

textarea {
    border: 1px solid #a07272;
    .border-radius(4px);
}

select {
    border: 1px solid #a07272;
    .border-radius(4px);
}

article {
    text-align: justify;
    background-image: url('assets/header-bg.png');
    background-repeat: no-repeat;
    background-position: 50% 100%;
    padding-bottom: 1em;
    margin-bottom: 2em;
    line-height: 20px;
}

article ul {
    list-style-position: inside;
}

article ul li {
    padding-bottom: 10px;
}

figure {
    background: #611414;
    text-decoration: none;
    .border-radius(4px);
}

figure.fig_left {
  float: left;
  margin: 0 1em 1em 0;
}

figure.fig_right {
  float: right;
  margin: 0 0 1em 1em;
}

figure.portrait {
    width: 50%;
}

figure.landscape {
    width: 100%;
}

figure img {
    width: 100%;
    padding: 0.3em;
}

figcaption {
    padding: 0.3em;
    color: #dfdfd8;
}

figure.adfigure {
    width: 306px;
    height: 256px;
}

#respmenu {
    display: none;
}

#dl-menu {
    position: absolute;
    top: 20px;
    left: 20px;
}

#main {
    margin: auto;
    z-index: 0;
}

#adframe {
    float: right;
    margin: 3px 3px 0 3px;
}

.extend {
    display: none;
    padding: 0.35em;
    margin: 15px 0 15px 0;
    border: 3px solid #611414;
    box-shadow: 2px 2px 3px #a07272;
    .border-radius(4px);
}

.isotope figure img {
    width: auto;
    padding: 0;
}

.radio_article audio {
    width: 100%;
    margin: 10px 0 25px 0;
}

.radio_article h3 {
    margin: 25px 0 5px 0;
}

.radio_article a {
    float: right;
}

.research_article figure {
    float: left;
    min-width: 200px;
    width: 100%;
    margin-bottom: 0.75em;
}

.research_article figure img {
    float: left;
    width: auto;
}

.research_article figcaption {
    width: auto;
}

.research_article form {
    margin-bottom: 10px;
}

.research_article input[type="text"] {
    float: right;
    width: 66%;
    margin-bottom: 5px;
}

.research_article select {
    float: left;
    width: 33%;
    margin-left: 1%;
}

.research_article input[type="submit"] {
    float: right;
    width: 30%;
    margin-bottom: 20px;
}

.research_article label {
    width: 33%;
    height: 29px;
    display: inline-block;
    float: left;
    margin-bottom: 5px;
}

.gallery_article {
    float: left;
}

.gallery_article figure {
    float: left;
    max-width: 46%;
    margin: 1%;
}

.search_article ul {
    list-style-type: none;
    padding-left: 0;
}

.search_article li {
    padding: 0.2em 0 0.4em;
}

.search_article form {
    display: table;
}

.search_article form label {
    display: table-cell;
}

.search_article form > div {
    display: table-cell;
}

.search_article form > div > input {
    width: 100%;
    text-align: right;
}

.search_article form input[type="submit"] {
    display: table-cell;
    width: 70px;
}

.addthis_toolbox {
    width: 200px;
}

/* glue: 0.4 hash: 4734f92ce1 */
.sprite-links {
    float: left;
    margin-top: 5px;
    background-image: url('sprites/links.png');
    background-repeat: no-repeat;
}

.sprite-links-youtube{background-position:0px 0px;width:130px;height:21px;}
.sprite-links-woxikon{background-position:0px -21px;width:130px;height:21px;}
.sprite-links-wowhead{background-position:0px -42px;width:130px;height:21px;}
.sprite-links-wikipedia{background-position:0px -63px;width:130px;height:21px;}
.sprite-links-leo{background-position:0px -84px;width:130px;height:21px;}
.sprite-links-imdb{background-position:0px -105px;width:130px;height:21px;}
.sprite-links-google{background-position:-130px 0px;width:130px;height:21px;}
.sprite-links-chefkoch{background-position:-130px -21px;width:130px;height:21px;}
.sprite-links-canoo{background-position:-130px -42px;width:130px;height:21px;}

/* glue: 0.4 hash: 12062bcfab */
.sprite-research {
    float: left;
    background-image: url('sprites/research.png');
    background-repeat: no-repeat;
}

.sprite-research-res_wow{background-position:0px 0px;width:200px;height:200px;}
.sprite-research-res_unilogo{background-position:-200px 0px;width:200px;height:200px;}
.sprite-research-res_rasterbator{background-position:0px -200px;width:200px;height:200px;}
.sprite-research-res_nsis{background-position:-200px -200px;width:200px;height:200px;}
.sprite-research-res_iros2004{background-position:-400px 0px;width:200px;height:200px;}

